--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.4",
-    "web3modal": "^1.9.5"
+    "web3modal": "^1.9.5",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
