--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "text-encoding": "^0.7.0",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.5",
     "websocket": "^1.0.34"
