--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crypto-sales-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
